@@ -2,6 +2,7 @@ Revision history for perl distribution Toadfarm
 
 0.53 Not Released
  - Try to improve cpan testers result
+ - Add notes about previous Toadfarm versions
 
 0.52 2015-04-26T10:10:31+0200
  - Fix documentation #6 #8
